SubBt/force-app/main/default/objects/Change_Order__c/fields/Change_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_No__c</fullName>
    <displayFormat>CO-{00000}</displayFormat>
    <label>All CO #</label>
    <type>AutoNumber</type>
</CustomField>