SubBt/force-app/main/default/objects/Change_Order__c/fields/CO_Number__c.field-meta.xml
<CustomField>
    <fullName>CO_Number__c</fullName>
    <formula>Project__r.Auto_Number__c  &amp;&apos;-&apos;&amp; Auto_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO #</label>
    <type>Text</type>
</CustomField>