SubBt/force-app/main/default/objects/Change_Order__c/fields/CO_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>CO_Submit_Date__c</fullName>
    <label>CO Submit Date</label>
    <type>Date</type>
</CustomField>