SubBt/force-app/main/default/objects/Change_Order__c/fields/CO_Tag_1__c.field-meta.xml
<CustomField>
    <fullName>CO_Tag_1__c</fullName>
    <inlineHelpText>Used for tagging and searching.</inlineHelpText>
    <label>CO Tag #1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>