SubBt/force-app/main/default/objects/Change_Order__c/fields/Customer_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Accepted_Date__c</fullName>
    <inlineHelpText>Date the Change Order was accepted by the Customer or Vendor.</inlineHelpText>
    <label>Date Accepted</label>
    <type>Date</type>
</CustomField>