SubBt/force-app/main/default/objects/Change_Order__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Change Orders (Customer)</relationshipLabel>
    <relationshipName>Customer1</relationshipName>
    <type>Lookup</type>
</CustomField>