SubBt/force-app/main/default/objects/Change_Order__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Date the Change Order needs to be signed.  This ensures the Project continues to move forward and does not get delayed.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>