SubBt/force-app/main/default/objects/Change_Order__c/fields/Is_CO_Imported__c.field-meta.xml
<CustomField>
    <fullName>Is_CO_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field Is used to manage the Change orders that we import from Add Change Orders Button On Continuation Sheet Screen.</description>
    <label>Is CO Imported</label>
    <type>Checkbox</type>
</CustomField>