SubBt/force-app/main/default/objects/Change_Order__c/fields/isARCO__c.field-meta.xml
<CustomField>
    <fullName>isARCO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isARCO</label>
    <type>Checkbox</type>
</CustomField>