SubBt/force-app/main/default/objects/Change_Order__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <inlineHelpText>You will use this field to Markup the entire Change Order, otherwise you will need to markup each individual line.</inlineHelpText>
    <label>Markup %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>