SubBt/force-app/main/default/objects/Change_Order__c/fields/Old_Payment_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Payment_Application_Id__c</fullName>
    <label>Old Payment Application Id</label>
    <length>125</length>
    <type>Text</type>
</CustomField>