SubBt/force-app/main/default/objects/Change_Order__c/fields/Payment_Application_G702__c.field-meta.xml
<CustomField>
    <fullName>Payment_Application_G702__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a lookup back to the Payment Application that the Change Order is associated with.</inlineHelpText>
    <label>Payment Application - G702</label>
    <referenceTo>SOV_Payment_Application__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>