SubBt/force-app/main/default/objects/Change_Order__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period</label>
    <referenceTo>Accounting_Period__c</referenceTo>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>