SubBt/force-app/main/default/objects/Change_Order__c/fields/Pricing_Request_Line__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Request Line</label>
    <referenceTo>Pricing_Request_Line__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>