SubBt/force-app/main/default/objects/Change_Order__c/fields/RFQ__c.field-meta.xml
<CustomField>
    <fullName>RFQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFQ</label>
    <referenceTo>RFQ__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>