SubBt/force-app/main/default/objects/Change_Order__c/fields/Roll_Up_All_Lines__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_All_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will roll-up all Change Order Lines into a single line.</inlineHelpText>
    <label>Roll-Up All Lines</label>
    <type>Checkbox</type>
</CustomField>