SubBt/force-app/main/default/objects/Change_Order__c/fields/Roll_Up_All_Lines_by_Group__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_All_Lines_by_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roll-Up All Lines by Group</label>
    <type>Checkbox</type>
</CustomField>