SubBt/force-app/main/default/objects/Change_Order__c/fields/Schedule_Impact_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Impact_in_Days__c</fullName>
    <label>Schedule Impact in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>