SubBt/force-app/main/default/objects/Change_Order__c/fields/Scheduling_Delay__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Delay__c</fullName>
    <label>Scheduling Delay</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>