SubBt/force-app/main/default/objects/Change_Order__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <formula>(Total_Amount__c +  (Markup__c * Total_Amount__c)) * (1+Tax_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Includes Markup and Taxes.</inlineHelpText>
    <label>SubTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>