SubBt/force-app/main/default/objects/Change_Order__c/fields/Total_Amount_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Tax__c</fullName>
    <formula>/*(buildertek__Total_Amount__c + (buildertek__Total_Amount__c * buildertek__Markup__c )) + (buildertek__Total_Amount__c *  buildertek__Tax_Rate__c  )+  buildertek__Incentives__c +  buildertek__Discounts__c*/

 Subtotal__c +  Incentives__c  +  Discounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount includes Markup, Incentives, Taxes and Discounts.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>