SubBt/force-app/main/default/objects/Change_Order__c/validationRules/Check_only_one_Check_box.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_only_one_Check_box</fullName>
    <active>true</active>
    <errorConditionFormula>Roll_Up_All_Lines__c  &amp;&amp;  Roll_Up_All_Lines_by_Group__c</errorConditionFormula>
    <errorDisplayField>Roll_Up_All_Lines__c</errorDisplayField>
    <errorMessage>You can not able to check Roll-Up All Lines by Group and Roll-Up All Lines at the same time.</errorMessage>
</ValidationRule>