SubBt/force-app/main/default/objects/Change_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>CO_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Tax_Rate__c</columns>
    <columns>Total_Amount_Tax__c</columns>
    <columns>Date_Created__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>