SubBt/force-app/main/default/objects/Change_Order__c/listViews/Paid.listView-meta.xml
<ListView>
    <fullName>Paid</fullName>
    <columns>Project__c</columns>
    <columns>CO_Number__c</columns>
    <columns>Date_Created__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Details__c</columns>
    <columns>Total_Amount_Tax__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <label>Paid</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>